added feedback form

--- a/more.html
+++ b/more.html
@@ -94,6 +94,14 @@
         </p>
         </div>
     </div>
+    <!--
+        https://script.google.com/a/macros/nycstudents.net/s/AKfycbxXTIwh9Wem-S_tmNq5R-1Ne9_HMaINLlQq1u8Iu-vY11GltPaszy0zZVW5zOa5usQ1/exec
+    -->
+
+
+    <div id="feedbackwrapper" class="wrapper">
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScDRTQWNxrM83ZM3SDp7z-xMTnnQ76JXRIV5u5V5dJ78MLI-A/viewform?embedded=true" height="460" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+    </div>
 
     <div id="footerwrapper">
         <footer>
