--- a/draw.html
+++ b/draw.html
@@ -47,11 +47,19 @@
         </div>
     </div>
 
-    <p>
-        After you picked a few colors, use those colors to create a quick sketch to test your colors.
-        Change your selected color by clicking on one of the colors on the toolbar on the side.
-        If you're not satisfied with your colors, feel free to reselect new colors at "home".
-    </p>
+    <div style="display: flex; flex-direction:row">
+        <p>
+            After you picked a few colors, use those colors to create a quick sketch to test your colors.
+            Change your selected color by clicking on one of the colors on the toolbar on the side.
+            If you're not satisfied with your colors, feel free to reselect new colors at "home".
+            There's some chill music available if you want to use it to channel your inner artist.
+        </p>
+        <div>
+            <audio controls>
+                <source src="audio/chillmusic.mp3" type="audio/mpeg">
+            </audio>
+        </div>
+    </div>
 
     <div id="footerwrapper">
         <footer>
