--- a/more.html
+++ b/more.html
@@ -32,6 +32,7 @@
     <div style="width: 100%; height: 2px; padding-bottom: 0px; background-image:linear-gradient(to right, rgb(255, 43, 43), rgb(137, 94, 215));"></div>
 
     <h2>Learn More About Colors!</h2>
+    <p>Finding the right colors can be problematic. So here are basic things to know about colors so you can keep them in mind when you're choosing your colors.</p>
 
     <div class="wrapper">
         <img height="350" src="https://www.provenwinners.com/sites/provenwinners.com/files/images/articles/color-wheel_0.jpg">
@@ -43,6 +44,7 @@
             Secondary colors are created by mixing two primary colors. Secondary colors include orange, green, and violet.
             Tertiary or intermediate colors are made by mixing primary and secondary colors. Blue-violet and yellow-green are examples of tertiary colors.
             Complementary colors are colors from opposing segments of the color wheel. Analogous colors are colors that are side by side on the color wheel.
+            Using complementary or analogous colors can be key to making your piece of work look great.
         </p>
         </div>
     </div>
@@ -50,7 +52,7 @@
         <div>
             <h1 id="h2">Color Temperature</h1>
         <p id="p2">
-            Colors on the red side of the color wheel are considered warm. Colors on the green side of the wheel have colors that are considered cool.
+            Colors on the red, orange, and yellow side of the color wheel are considered warm. Colors on the green, blue, and violet side of the wheel have colors that are considered cool.
             Warms colors tend to appear closer and can evoke strong emotions. They stand out, which is why they're often used for warning signs like stop signs and radiation warning symbols.
             Cool colors are relaxing and soothing. They are more passive than the active warm colors. Cool colors tend to appear more distant than warm colors.
             Neutral colors are hues that lack color; they include colors like white, black, gray, brown, and beige. Neutral colors are easy on the eye, which makes them perfect for backgrounds.
@@ -78,6 +80,7 @@
             Each pixel on your screen is made up of a red, green, and blue subpixel. Each subpixel will light up with the right intensity to create specific colors. 
             Different monitors and screens use slightly different technologies to actually display the data to your eyes. For example, pixels can be backlit by a panel or individually lit.
             A computer has to send data to a monitor for the color values of each individual pixel in order to accurately display an image or video.
+            Since every monitor and display is different, the colors you want to convey may end up looking vastly different on a different display.
         </p>
         </div>
         <img height="300" src="https://media.istockphoto.com/id/1125951709/photo/tv-pixels-closeup-macro-screen-pixel.jpg?s=170667a&w=0&k=20&c=UvGG0H8V4HOlPNGSrj5NgEOrbd-WKRi1deszqYFH7Qw=">
