--- a/index.html
+++ b/index.html
@@ -64,5 +64,20 @@
 </html>
 
 <!--
-    
+    I wanted to create a website to help pick colors because choosing colors for your website is an small problem that everyone has to face.
+    This website also doesn't just have to be for choosing website colors since it can be used for other types of design.
+    For basic functionality, I used a color type input to allow the user to choose 5 different colors.
+    I then made use of localstorage and javascript to transfer these same colors across multiple pages.
+    I also had to use javascript to change the information on the table whenever a colorinput color was changed
+
+    navbar: I created a navbar that's the same for every page that shows the selected colors from the color inputs of the home page
+
+    draw: I found online that you can emulate a drawing canvas with a bunch of small "pixels" on a grid; using javascript, i made it so
+    each pixel would change its background color to the selected color whenever the mousedown event happens on it
+
+    gallery: for the gallery, i just used a random image generator and then overlayed a semi-transparent div with colors as a filter
+
+    more: I wanted this website to also contain some basic information about colors in order to help the user make educated choices on choosing colors
+    So I included some basic facts about colors like their classification, then I included some factors that may influence color decisions such as
+    color blindness, complementary colors, and trademarked colors
 -->
