draw mobile view

--- a/draw.html
+++ b/draw.html
@@ -37,7 +37,7 @@
         <div id="canvas"></div>
         <div id="toolbar">
             <div style="background-color: white;" id="selectedcolor" class="colorselector"></div>
-            <div style="width: 80px; height: 2px; background-color: black; align-self: center;"></div>
+            <div id="divider"></div>
             <div id="colorselector1" class="colorselector"></div>
             <div id="colorselector2" class="colorselector"></div>
             <div id="colorselector3" class="colorselector"></div>
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <div style="display: flex; flex-direction:row">
+    <div style="display: flex; flex-direction:column">
         <p>
             After you picked a few colors, use those colors to create a quick sketch to test your colors.
             Change your selected color by clicking on one of the colors on the toolbar on the side.
