--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <div id="colorsquare5" class="colorsquare"></div>
         </div>
     </div>
-    <div style="width: 100%; height: 2px; background-image:linear-gradient(to right, rgb(255, 43, 43), rgb(137, 94, 215));"></div>
+    <div style="width: 100%; height: 3px; background-image:linear-gradient(to right, rgb(255, 43, 43), rgb(137, 94, 215));"></div>
 
     <div>
-        <h1>Welcome to the color palette picker!</h1>
+        <h1>Welcome to the Color Palette Picker!</h1>
     </div>
 
     <table>
