--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         You can use this website to choose 5 different colors and see how good they would look like when used together.
         For example, you can try using this to find nice color themes for your website CSS or for any form of art that involves choosing colors.
     </p>
+    <div class="linediv2"></div>
     <p>
         Start by Clicking on a color input tile under the "color" table column and choose a new color.
         Then you can see the RGB and hexadecimal values of each color as you change them to make it easier to actually use those colors.
