--- a/draw.html
+++ b/draw.html
@@ -30,9 +30,9 @@
         </div>
     </div>
 
-    <div style="margin-bottom: 20px; width: 100%; height: 3px; background-image:linear-gradient(to right, rgb(88, 202, 76), rgb(94, 128, 215));"></div>
+    <div style="margin-bottom: 10px; width: 100%; height: 3px; background-image:linear-gradient(to right, rgb(88, 202, 76), rgb(94, 128, 215));"></div>
     <h1>Welcome to the canvas!</h1>
-
+    <div style="margin-top: 10px; width: 100%; height: 3px; background-image:linear-gradient(to right, rgb(88, 202, 76), rgb(94, 128, 215));"></div>
     <div id="canvaswrapper">
         <div id="canvas"></div>
         <div id="toolbar">
@@ -55,9 +55,11 @@
             There's some chill music available if you want to use it to channel your inner artist.
         </p>
         <div>
-            <audio controls>
-                <source src="audio/chillmusic.mp3" type="audio/mpeg">
-            </audio>
+            <div id="audiowrapper">
+                <audio controls>
+                    <source src="audio/chillmusic.mp3" type="audio/mpeg">
+                </audio>
+            </div>
         </div>
     </div>
 
